SingleOutShifter: optimise pins