@@ -29,11 +29,11 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  */
-import pko.KiCadLogicalSchemeSimulator.api.schemaPart.SchemaPartSpi;
-import pko.KiCadLogicalSchemeSimulator.components.shifter.ShifterSpi;
-import pko.KiCadLogicalSchemeSimulator.components.shifter.singleOut.SingleOutShifterSpi;
 
-open module KiCadLogicalSchemeSimulator.components.shifter {
-    requires KiCadLogicalSchemeSimulator.simulator;
-    provides SchemaPartSpi with SingleOutShifterSpi, ShifterSpi;
+test {
+    doFirst {
+        jvmArgs += [
+                '--add-exports', 'KiCadLogicalSchemeSimulator.components.shifter/pko.KiCadLogicalSchemeSimulator.components.shifter=ALL-UNNAMED',
+        ]
+    }
 }
